inclusão da função para exibir todos eventos

--- a/eventos.html
+++ b/eventos.html
@@ -21,6 +21,9 @@
         <section class="full">
             <div class="container text-center">
                 <h2>Todos os Eventos</h2>
+                <div id="dataexit">
+            
+                </div>
             </div>
             <div class="container d-flex justify-content-center align-items-center flex-wrap">
             </div>
@@ -100,7 +103,6 @@
     </footer>
 </body>
 <!-- <script src="js/index.js"></script> -->
-<script src="js/formatar-data.js"></script>
-<script src="js/todos-eventos.js"></script>
+<script src="js/exibirEventos.js"></script>
 
 </html>
