--- a/index.html
+++ b/index.html
@@ -1,6 +1,5 @@
 <!DOCTYPE html>
 <html lang="en">
-
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -9,10 +8,7 @@
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
     <link rel="stylesheet" href="css/style.css">
     <link rel="stylesheet" href="css/modal.css">
-    <link rel="stylesheet" href="css/admin-modal.css">
-    <link rel="stylesheet" href="css/admin.css">
 </head>
-
 <body>
     <header class=" d-flex justify-content-center align-items-center">
         <img src="img/Sound-logo (1).png" width="300" alt="">
@@ -51,14 +47,12 @@
                 <a href="eventos.html" class="btn btn-secondary">ver todos os eventos</a>
             </div>
         </section>
-        <section class="full d-flex justify-content-center align-items-center" style="background-color: #f2f2f2; color: #555">
+        <section class="full d-flex justify-content-center align-items-center" style="background-color: #F2F2F2; color: #555">
             <div class="container">
                 <div class="row d-flex justify-content-center align-items-center">
                     <div class="col">
                         <h2>A Sound Garden</h2>
-
                         <p>Sound Garden é uma casa de show super descolada</p>
-
                         <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Id autem, fugiat recusandae, totam inventore harum iste libero obcaecati neque fugit ipsam. Dolorum quae quis odio rem at eum cumque excepturi.</p>
                         <p>Alias animi nostrum aperiam sapiente laudantium corporis esse voluptatem, repellendus nam exercitationem reprehenderit error. Maiores quibusdam molestias adipisci magni maxime explicabo voluptatibus ipsum delectus, cum soluta esse
                             ab ducimus. Molestias facilis hic quod similique, voluptate porro architecto itaque odit dolore temporibus, dignissimos magni delectus in?</p>
@@ -71,7 +65,6 @@
                 </div>
             </div>
         </section>
-        
         <div class="modal" id="myModal" tabindex="-1" aria-labelledby="modal de reserva" aria-hidden="true">
             <div class="modal-dialog modal-dialog-centered">
                 <div class="modal-content">
@@ -103,7 +96,6 @@
                 </div>
             </div>
         </div>
-
     </main>
     <footer>
         <div class="container d-flex justify-content-center align-items-center">
@@ -125,6 +117,4 @@
 </body>
 <script src="js/index.js"></script>
 <script src="js/modal-home.js"></script>
-
-
 </html>
