--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
             <div class="container text-center">
                 <h2>Próximos eventos</h2>
             </div>
-            <div class="container d-flex justify-content-center align-items-center">
+            <div class="container d-flex justify-content-center align-items-center" id="proximoseventos">
                 <!-- <article class="evento card p-5 m-3">
                     <h2>nome do evento - 05/03/2022</h2>
                     <h4>Arctic Monkeys, The Kooks, Hiatus Kaiyote</h4>
@@ -125,6 +125,7 @@
 </body>
 <script src="js/index.js"></script>
 <script src="js/modal-home.js"></script>
+<script src="js/principais.js"></script>
 
 
 </html>
